[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/units/player_soldier.png" type="Texture" id=1]
[ext_resource path="res://assets/units/player_base_tank.png" type="Texture" id=2]
[ext_resource path="res://ui/UnitSelectionScreen.gd" type="Script" id=3]
[ext_resource path="res://fonts/roboto_semibold_36.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/roboto_light_24.tres" type="DynamicFont" id=5]

[node name="UnitSelectionScreen" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
custom_constants/separation = 50

[node name="Title" type="Label" parent="Panel/MarginContainer/MainContainer"]
margin_right = 924.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 4 )
text = "Pick your units"

[node name="SlotsContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainContainer"]
margin_top = 98.0
margin_right = 924.0
margin_bottom = 131.0

[node name="SlotsLabel" type="Label" parent="Panel/MarginContainer/MainContainer/SlotsContainer"]
margin_right = 280.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 5 )
text = "Max Slots Available:"

[node name="SlotsAvailable" type="Label" parent="Panel/MarginContainer/MainContainer/SlotsContainer"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 5 )
text = "10"

[node name="InteractionContainer" type="VBoxContainer" parent="Panel/MarginContainer/MainContainer"]
margin_top = 181.0
margin_right = 924.0
margin_bottom = 359.0
custom_constants/separation = 50

[node name="SoldierContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainContainer/InteractionContainer"]
margin_right = 924.0
margin_bottom = 64.0
custom_constants/separation = 50

[node name="SoldierIcon" type="TextureRect" parent="Panel/MarginContainer/MainContainer/InteractionContainer/SoldierContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="SoldierSelect" type="SpinBox" parent="Panel/MarginContainer/MainContainer/InteractionContainer/SoldierContainer"]
margin_left = 114.0
margin_right = 188.0
margin_bottom = 64.0
max_value = 10.0
rounded = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/MainContainer/InteractionContainer"]
margin_top = 114.0
margin_right = 924.0
margin_bottom = 178.0
custom_constants/separation = 50

[node name="TankIcon" type="TextureRect" parent="Panel/MarginContainer/MainContainer/InteractionContainer/HBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="TankSelect" type="SpinBox" parent="Panel/MarginContainer/MainContainer/InteractionContainer/HBoxContainer2"]
margin_left = 114.0
margin_right = 188.0
margin_bottom = 64.0

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/MainContainer"]
margin_top = 409.0
margin_right = 924.0
margin_bottom = 448.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainContainer/CenterContainer"]
margin_left = 246.0
margin_right = 678.0
margin_bottom = 39.0
custom_constants/separation = 100

[node name="ResetUnits" type="Button" parent="Panel/MarginContainer/MainContainer/CenterContainer/HBoxContainer"]
margin_right = 180.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 5 )
text = "RESET Values"

[node name="StartGameButton" type="Button" parent="Panel/MarginContainer/MainContainer/CenterContainer/HBoxContainer"]
margin_left = 280.0
margin_right = 432.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 5 )
text = "Start Game"
[connection signal="value_changed" from="Panel/MarginContainer/MainContainer/InteractionContainer/SoldierContainer/SoldierSelect" to="." method="_on_SoldierSelect_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/MainContainer/InteractionContainer/HBoxContainer2/TankSelect" to="." method="_on_TankSelect_value_changed"]
[connection signal="pressed" from="Panel/MarginContainer/MainContainer/CenterContainer/HBoxContainer/ResetUnits" to="." method="_on_ResetUnits_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/MainContainer/CenterContainer/HBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
